# margadh

./: .gitignore  README.md
ai-marketing-director/: .env.example  .gitignore  ARCHITECTURE_UPDATE_SUMMARY.md  COMPREHENSIVE_TEST_SUITE_COMPLETE.md  DEVELOPMENT_STANDARDS.md  DEVELOPMENT_STANDARDS_SUMMARY.md  DIRECTORY_SETUP_COMPLETE.md  DIRECTORY_STRUCTURE.md  FUNCTIONAL_PATTERNS_UPDATE.md  INTEGRATIONS_GUIDE.md  INTEGRATION_EXAMPLE.md  MULTIAGENT_ARCHITECTURE.md  OAUTH_README.md  OAUTH_SETUP_GUIDE.md  PHASE_1_BASE_AGENT_COMPLETE.md  PROJECT_SPECIFICATION.md  QUICKSTART.md  README.md  SPECIFICATION.md  STANDARDS_COMPLETE_SUMMARY.md  demo_oauth.py  main.py  manage.py  pyproject.toml  requirements.txt  setup.cfg
ai-marketing-director/agents/: README.md  __init__.py  orchestrator.py  social_media_agent.py  strategy_agent.py
ai-marketing-director/agents/base/: __init__.py  agent_config.py  agent_protocol.py  base_agent.py
ai-marketing-director/agents/executive/cmo/: __init__.py  cmo_agent.py
ai-marketing-director/agents/executive/director_communications/: __init__.py  director_communications_agent.py
ai-marketing-director/agents/executive/vp_marketing/: __init__.py  vp_marketing_agent.py
ai-marketing-director/agents/management/campaign_manager/: __init__.py  campaign_manager_agent.py
ai-marketing-director/agents/management/content_manager/: __init__.py  content_manager_agent.py
ai-marketing-director/agents/management/social_media_manager/: __init__.py  social_media_manager_agent.py
ai-marketing-director/agents/specialists/analytics_specialist/: __init__.py  analytics_specialist_agent.py
ai-marketing-director/agents/specialists/bluesky_manager/: __init__.py  bluesky_manager_agent.py
ai-marketing-director/agents/specialists/copywriter/: __init__.py  copywriter_specialist_agent.py
ai-marketing-director/agents/specialists/designer/: __init__.py  designer_specialist_agent.py
ai-marketing-director/agents/specialists/email_specialist/: __init__.py  email_specialist_agent.py
ai-marketing-director/agents/specialists/linkedin_manager/: __init__.py  linkedin_manager_agent.py
ai-marketing-director/agents/specialists/market_research/: __init__.py  market_research_agent.py
ai-marketing-director/agents/specialists/seo_specialist/: __init__.py  seo_specialist_agent.py
ai-marketing-director/agents/specialists/twitter_manager/: __init__.py  twitter_manager_agent.py
ai-marketing-director/config/: __init__.py  settings.py
ai-marketing-director/core/: __init__.py  brand_voice.py  exceptions.py  oauth.py  oauth_server.py
ai-marketing-director/docs/: BLUESKY_LINKEDIN_INTEGRATION.md  SOCIAL_MEDIA_CHANNELS.md
ai-marketing-director/docs/adr/: ADR-001-multiagent-department-architecture.md  ADR-002-tdd-methodology.md  ADR-003-redis-message-bus-pattern.md  ADR-004-multi-provider-llm-abstraction.md  ADR-005-exception-wrapping-standard.md  ADR-006-cmo-supervisory-agent.md  ADR-007-content-manager-agent.md  ADR-008-analytics-specialist-agent.md  ADR-009-copywriter-specialist-agent.md  ADR-010-seo-specialist-agent.md  ADR-011-designer-specialist-agent.md  ADR-012-email-specialist-agent.md  ADR-013-market-research-agent.md  ADR-014-vp-marketing-agent.md  ADR-015-director-communications-agent.md  README.md
ai-marketing-director/frontend/: ANALYTICS_DASHBOARD_FEATURE.md  APPROVAL_WORKFLOW_FEATURE.md  COLLABORATION_FEATURES.md  CONTENT_CALENDAR_FEATURE.md  EXECUTIVE_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  PROGRESS_SUMMARY.md  UX_AUDIT.md  VISUAL_FIXES.md  index.html  package-lock.json  package.json  vite.config.ts
ai-marketing-director/frontend/src/: App.tsx  main.tsx
ai-marketing-director/frontend/src/components/: ActivityFeed.css  ActivityFeed.tsx  ApprovalWorkflow.css  ApprovalWorkflow.tsx  Comments.css  Comments.tsx  ErrorState.css  ErrorState.tsx  Layout.css  Layout.tsx  LoadingSkeleton.css  LoadingSkeleton.tsx  VersionHistory.css  VersionHistory.tsx
ai-marketing-director/frontend/src/pages/: Approvals.css  Approvals.tsx  Campaigns.css  Campaigns.tsx  ContentCalendar.css  ContentCalendar.tsx  ContentEditor.css  ContentEditor.tsx  ContentLibrary.css  ContentLibrary.tsx  Dashboard.css  Dashboard.tsx  OAuthSettings.css  OAuthSettings.tsx
ai-marketing-director/frontend/src/services/: analytics.ts  api.ts  approvals.ts  collaboration.ts
ai-marketing-director/infrastructure/: README.md
ai-marketing-director/infrastructure/llm/: __init__.py  llm_provider.py
ai-marketing-director/infrastructure/message_bus/: __init__.py  message_bus.py
ai-marketing-director/integrations/: base.py  linkedin.py  twitter.py
ai-marketing-director/templates/: .flake8  .pylintrc  README.md  example_agent.py  example_tdd_workflow.md  mypy.ini  pyproject.toml  pytest.ini
ai-marketing-director/templates/tests/: test_e2e_template.py  test_integration_template.py  test_unit_template.py
ai-marketing-director/tests/lint/: test_code_quality.py
ai-marketing-director/tests/regression/: test_base_agent_regression.py
(+42 files in other folders)
